added check_in_recording function. Fully tested and working

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,8 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 638 ms, sys: 75.7 ms, total: 713 ms\n",
-      "Wall time: 712 ms\n"
+      "CPU times: user 621 ms, sys: 104 ms, total: 725 ms\n",
+      "Wall time: 725 ms\n"
      ]
     },
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.86 s, sys: 2.32 s, total: 9.18 s\n",
-      "Wall time: 17.4 s\n"
+      "CPU times: user 7.13 s, sys: 2.34 s, total: 9.47 s\n",
+      "Wall time: 18.6 s\n"
      ]
     },
     {
@@ -254,14 +254,14 @@
        "4  b55f1db3-c6d2-4645-b908-03e1017a99c2"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "# Loading Relevant SQL tables\n",
+    "# Loading recording table SQL tables\n",
     "\n",
     "MB_recording = pd.read_sql('SELECT gid FROM recording', con = conn, columns = ['rec-gid'])\n",
     "# MB_recording.set_index('gid', inplace = True)\n",
@@ -285,8 +285,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.3 s, sys: 116 ms, total: 1.42 s\n",
-      "Wall time: 7.9 s\n"
+      "CPU times: user 1.3 s, sys: 161 ms, total: 1.46 s\n",
+      "Wall time: 7.01 s\n"
      ]
     },
     {
@@ -319,24 +319,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>dfbefafa-a7dc-4024-8a28-be15537591e9</th>\n",
-       "      <td>c4793e5b-5825-4221-893d-8b3776289127</td>\n",
+       "      <th>4672ac68-27ac-4843-9c19-d283018a7c17</th>\n",
+       "      <td>cd24bef4-d513-4e42-8cd4-0b8be1e654b7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69102b65-98cd-46aa-a757-b24890c0e030</th>\n",
-       "      <td>74324461-d321-4197-82f8-fdb41471ea8b</td>\n",
+       "      <th>6db9ab2f-1bb7-42bb-a1cf-62935e906c2a</th>\n",
+       "      <td>f2b7197a-d85b-4d26-ae51-2f0826ac69c7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c876dbfd-159a-4d83-bfbb-fd5438c9db65</th>\n",
-       "      <td>d6f71677-ad41-46a1-87bc-5f00c702eb8a</td>\n",
+       "      <th>7068ff7e-5dc2-49a7-b918-45d35c24cec4</th>\n",
+       "      <td>d404340f-87a2-4626-ac4a-2451bfa04387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2457840d-75d6-4b2b-87de-ea6a0d02e9cf</th>\n",
-       "      <td>b1b7370c-f7d8-4614-b41e-89d011e0108c</td>\n",
+       "      <th>14005a4e-54f3-4547-8f78-e264344efe6f</th>\n",
+       "      <td>d07f465a-883a-4574-ac4c-fc51ba8679ab</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49a097f4-3fa5-48b5-ac49-dc3902af0ffe</th>\n",
-       "      <td>3532d38e-7853-430f-b9b5-8501378729ce</td>\n",
+       "      <th>a5c5ede0-b38e-468c-a2f9-874392f72080</th>\n",
+       "      <td>272c5b16-c08c-4de8-863f-45e2784d77f1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -345,11 +345,11 @@
       "text/plain": [
        "                                                               new-rec-gid\n",
        "old-rec-gid                                                               \n",
-       "dfbefafa-a7dc-4024-8a28-be15537591e9  c4793e5b-5825-4221-893d-8b3776289127\n",
-       "69102b65-98cd-46aa-a757-b24890c0e030  74324461-d321-4197-82f8-fdb41471ea8b\n",
-       "c876dbfd-159a-4d83-bfbb-fd5438c9db65  d6f71677-ad41-46a1-87bc-5f00c702eb8a\n",
-       "2457840d-75d6-4b2b-87de-ea6a0d02e9cf  b1b7370c-f7d8-4614-b41e-89d011e0108c\n",
-       "49a097f4-3fa5-48b5-ac49-dc3902af0ffe  3532d38e-7853-430f-b9b5-8501378729ce"
+       "4672ac68-27ac-4843-9c19-d283018a7c17  cd24bef4-d513-4e42-8cd4-0b8be1e654b7\n",
+       "6db9ab2f-1bb7-42bb-a1cf-62935e906c2a  f2b7197a-d85b-4d26-ae51-2f0826ac69c7\n",
+       "7068ff7e-5dc2-49a7-b918-45d35c24cec4  d404340f-87a2-4626-ac4a-2451bfa04387\n",
+       "14005a4e-54f3-4547-8f78-e264344efe6f  d07f465a-883a-4574-ac4c-fc51ba8679ab\n",
+       "a5c5ede0-b38e-468c-a2f9-874392f72080  272c5b16-c08c-4de8-863f-45e2784d77f1"
       ]
      },
      "execution_count": 6,
@@ -359,7 +359,7 @@
    ],
    "source": [
     "%%time\n",
-    "# Loading Relevant SQL tables\n",
+    "# Loading redirect table SQL table\n",
     "\n",
     "MB_redirects = pd.read_sql('select r.gid, rgr.gid from recording r join recording_gid_redirect rgr on rgr.new_id = r.id', con = conn)\n",
     "MB_redirects.columns = ['old-rec-gid', 'new-rec-gid']\n",
@@ -384,8 +384,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.62 s, sys: 2.89 s, total: 12.5 s\n",
-      "Wall time: 25.1 s\n"
+      "CPU times: user 9.39 s, sys: 3.19 s, total: 12.6 s\n",
+      "Wall time: 24.9 s\n"
      ]
     },
     {
@@ -447,7 +447,7 @@
    ],
    "source": [
     "%%time\n",
-    "# Loading Relevant SQL tables\n",
+    "# Loading track table\n",
     "\n",
     "MB_track = pd.read_sql('SELECT gid FROM track', con = conn)\n",
     "MB_track.columns = ['track-gid']\n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -472,8 +472,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.38 s, sys: 708 ms, total: 3.09 s\n",
-      "Wall time: 6.26 s\n"
+      "CPU times: user 2.28 s, sys: 337 ms, total: 2.62 s\n",
+      "Wall time: 5.99 s\n"
      ]
     },
     {
@@ -539,7 +539,7 @@
        "9ba7a9b9-a21c-4b12-8771-4c108b08b3e2  13b3875a-c89a-4be5-a6e4-0ca9164bc41d"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
    "source": [
     "\n",
     "%%time\n",
-    "# Loading Relevant SQL tables\n",
+    "# Loading canonical recording mbid table\n",
     "\n",
     "MB_canonical = pd.read_sql('SELECT recording_mbid, canonical_recording_mbid FROM mapping.canonical_recording_redirect', con = conn)\n",
     "MB_canonical.columns = ['recording-gid', 'canonical-recording-gid']\n",
@@ -556,21 +556,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 150,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64019"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "## Architechture:\n",
+    "\n",
+    "1. Take a chunk of MBIDs (Test optimal chunk sizes too. Current optimal > 300k rows)\n",
+    "2. Only get unique values from this series\n",
+    "3. Pass it thorugh the following:\n",
+    "    - check_in_recording()\n",
+    "    - Get mbids that don't exist in recording, and pass it through check_in_redirect()\n",
+    "    - Get mbids that don't exist in redirect, and pass it through check_in_track()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "# Problem Statement:\n",
@@ -578,20 +581,58 @@
     "2. Mass query the series items in MB_recording table\n",
     "3. Get a boolean map for series_of_mbids to check if each MBID exists in the MB table.\n",
     "'''\n",
-    "def check_recording_existance(series_of_mbids):\n",
+    "\n",
+    "# To Do: Mod the function to only take in & return unique mbids.\n",
+    "\n",
+    "def check_in_recording(series_of_mbids):\n",
+    "    # Takes a series, removes duplicate values, turns back into series.\n",
+    "    series_of_unique_mbids = pd.Series(series_of_mbids.unique())\n",
     "    \n",
-    "    return MB_recording.gid[MB_recording.gid.isin(series_of_mbids)]\n",
-    "\n",
-    "\n",
-    "test_chunk = df['recording-MBID']\n",
-    "test_chunk.isin((check_recording_existance(test_chunk)))\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "1. Takes in all MBIDs\n",
-    "2. Checks if all MBIDs are in MB_recording\n",
-    "3. Checks if '''"
+    "    # Queries all mbids in the recording table. Returns mbids that are present in recording table.\n",
+    "    mbids_in_recording = MB_recording.gid[MB_recording.gid.isin(series_of_unique_mbids)]\n",
+    "    \n",
+    "    # Makes a boolean map for all mbids in series_of_unique_mbids\n",
+    "    bool_map_recording = series_of_unique_mbids.isin(mbids_in_recording)\n",
+    "    \n",
+    "    bool_map_recording_nonunique = series_of_mbids.isin(mbids_in_recording)\n",
+    "    \n",
+    "    # Returns a series of boolean values corresponding the the fullsized series_of_mbids\n",
+    "    return bool_map_recording_nonunique\n",
+    "    # return MB_recording.gid[MB_recording.gid.isin(series_of_mbids)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Queried 382674 rows in ~2s\n",
+      "CPU times: user 2.13 s, sys: 911 µs, total: 2.13 s\n",
+      "Wall time: 2.13 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Testing check_recording_existance()\n",
+    "\n",
+    "input = pd.Series(df['recording-MBID'].unique())\n",
+    "output = check_in_recording(input)\n",
+    "\n",
+    "output.head()\n",
+    "print(\"Queried 382674 rows in ~2s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
