wrote a generic query function. Tested rec, redir, track existance with 1M rows!

--- a/MLHD.ipynb
+++ b/MLHD.ipynb
@@ -70,15 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 621 ms, sys: 104 ms, total: 725 ms\n",
-      "Wall time: 725 ms\n"
+      "(1985787, 4)\n",
+      "CPU times: user 3.78 s, sys: 371 ms, total: 4.15 s\n",
+      "Wall time: 4.15 s\n"
      ]
     },
     {
@@ -110,61 +111,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1166994688</td>\n",
-       "      <td>a49b5d41-7399-49ef-bcb8-a5779a30d2e9</td>\n",
-       "      <td>af158d94-eb6f-4f1f-a8a2-f685b60b132e</td>\n",
-       "      <td>317bdd0e-8956-4547-b8f0-fd233d10d378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1166995444</td>\n",
-       "      <td>bbc5b66b-d037-4f26-aecf-0b129e7f876a</td>\n",
-       "      <td>075cef57-9350-41a9-9a53-4391f013e164</td>\n",
-       "      <td>279f9f44-abfc-406e-a686-92961577bee9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1167000369</td>\n",
-       "      <td>a49b5d41-7399-49ef-bcb8-a5779a30d2e9</td>\n",
-       "      <td>58c90879-d279-41c3-9ecc-b686ae75bc78</td>\n",
-       "      <td>73eadf15-ebc0-40cd-a71c-30dce9d82d6b</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1167000642</td>\n",
-       "      <td>34e10b51-b5c6-4bc1-b70e-f05f141eda1e</td>\n",
-       "      <td>2988a7b9-0bb1-4eaf-98ee-34eddf2e5740</td>\n",
-       "      <td>08c272e6-02fe-4fb0-930c-2f342dd7d092</td>\n",
+       "      <td>1348268938</td>\n",
+       "      <td>275d1fca-22e8-46b9-85e6-c3523098a599</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b2fa9a1a-1d71-4256-83b1-8705be6387ce</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1167001189</td>\n",
-       "      <td>b665b768-0d83-4363-950c-31ed39317c15</td>\n",
-       "      <td>0d14ea49-7f2d-4c38-9986-cee6846a5bb5</td>\n",
-       "      <td>254a6a58-d097-4307-ba1e-1fc15c8ac70e</td>\n",
+       "      <td>1348268136</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>c857137c-b09b-4ed5-8006-961624e27854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1348247430</td>\n",
+       "      <td>09887aa7-226e-4ecc-9a0c-02d2ae5777e1</td>\n",
+       "      <td>4df061b7-db29-4be1-ae26-bdb8c3866925</td>\n",
+       "      <td>7460e38b-f28e-4919-a17b-a4f4c19caea2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1348247205</td>\n",
+       "      <td>0a832a68-88ec-455f-8b53-d9e14838202f</td>\n",
+       "      <td>5157b818-6106-3d12-bc9a-4c2b15e80764</td>\n",
+       "      <td>c9f20069-38c3-4988-9ee1-213c0c67b1d4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1348246437</td>\n",
+       "      <td>8559df00-6489-4e23-83dd-d43e3ec4745c</td>\n",
+       "      <td>20480e5c-369a-442f-b39f-9c14a83a4cdf</td>\n",
+       "      <td>150cdcfd-c63f-4aa4-995a-2b3687abf4f8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    timestamp                           artist-MBID  \\\n",
-       "0  1166994688  a49b5d41-7399-49ef-bcb8-a5779a30d2e9   \n",
-       "1  1166995444  bbc5b66b-d037-4f26-aecf-0b129e7f876a   \n",
-       "2  1167000369  a49b5d41-7399-49ef-bcb8-a5779a30d2e9   \n",
-       "3  1167000642  34e10b51-b5c6-4bc1-b70e-f05f141eda1e   \n",
-       "4  1167001189  b665b768-0d83-4363-950c-31ed39317c15   \n",
+       "     timestamp                           artist-MBID  \\\n",
+       "1   1348268938  275d1fca-22e8-46b9-85e6-c3523098a599   \n",
+       "4   1348268136                                   NaN   \n",
+       "6   1348247430  09887aa7-226e-4ecc-9a0c-02d2ae5777e1   \n",
+       "7   1348247205  0a832a68-88ec-455f-8b53-d9e14838202f   \n",
+       "10  1348246437  8559df00-6489-4e23-83dd-d43e3ec4745c   \n",
        "\n",
-       "                           release-MBID                        recording-MBID  \n",
-       "0  af158d94-eb6f-4f1f-a8a2-f685b60b132e  317bdd0e-8956-4547-b8f0-fd233d10d378  \n",
-       "1  075cef57-9350-41a9-9a53-4391f013e164  279f9f44-abfc-406e-a686-92961577bee9  \n",
-       "2  58c90879-d279-41c3-9ecc-b686ae75bc78  73eadf15-ebc0-40cd-a71c-30dce9d82d6b  \n",
-       "3  2988a7b9-0bb1-4eaf-98ee-34eddf2e5740  08c272e6-02fe-4fb0-930c-2f342dd7d092  \n",
-       "4  0d14ea49-7f2d-4c38-9986-cee6846a5bb5  254a6a58-d097-4307-ba1e-1fc15c8ac70e  "
+       "                            release-MBID                        recording-MBID  \n",
+       "1                                    NaN  b2fa9a1a-1d71-4256-83b1-8705be6387ce  \n",
+       "4                                    NaN  c857137c-b09b-4ed5-8006-961624e27854  \n",
+       "6   4df061b7-db29-4be1-ae26-bdb8c3866925  7460e38b-f28e-4919-a17b-a4f4c19caea2  \n",
+       "7   5157b818-6106-3d12-bc9a-4c2b15e80764  c9f20069-38c3-4988-9ee1-213c0c67b1d4  \n",
+       "10  20480e5c-369a-442f-b39f-9c14a83a4cdf  150cdcfd-c63f-4aa4-995a-2b3687abf4f8  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,12 +173,13 @@
    "source": [
     "%%time\n",
     "df = read_files('random_file_paths.txt')\n",
+    "print(df.shape)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +194,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.13 s, sys: 2.34 s, total: 9.47 s\n",
-      "Wall time: 18.6 s\n"
+      "CPU times: user 6.91 s, sys: 2.54 s, total: 9.46 s\n",
+      "Wall time: 18.5 s\n"
      ]
     },
     {
@@ -254,7 +256,7 @@
        "4  b55f1db3-c6d2-4645-b908-03e1017a99c2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +287,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.3 s, sys: 161 ms, total: 1.46 s\n",
-      "Wall time: 7.01 s\n"
+      "CPU times: user 1.26 s, sys: 149 ms, total: 1.41 s\n",
+      "Wall time: 9.81 s\n"
      ]
     },
     {
@@ -319,24 +321,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4672ac68-27ac-4843-9c19-d283018a7c17</th>\n",
-       "      <td>cd24bef4-d513-4e42-8cd4-0b8be1e654b7</td>\n",
+       "      <th>dfbefafa-a7dc-4024-8a28-be15537591e9</th>\n",
+       "      <td>c4793e5b-5825-4221-893d-8b3776289127</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6db9ab2f-1bb7-42bb-a1cf-62935e906c2a</th>\n",
-       "      <td>f2b7197a-d85b-4d26-ae51-2f0826ac69c7</td>\n",
+       "      <th>6fdc7ef3-19ea-421d-9246-243a3c9b193a</th>\n",
+       "      <td>041199ca-09bd-4dfc-90a5-ec12fee79cba</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7068ff7e-5dc2-49a7-b918-45d35c24cec4</th>\n",
-       "      <td>d404340f-87a2-4626-ac4a-2451bfa04387</td>\n",
+       "      <th>aceb2a1c-c696-4948-8f98-e1690212f2c3</th>\n",
+       "      <td>3455438b-8105-4cff-a08d-a13da4df20f1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14005a4e-54f3-4547-8f78-e264344efe6f</th>\n",
-       "      <td>d07f465a-883a-4574-ac4c-fc51ba8679ab</td>\n",
+       "      <th>2251ff3f-05ac-4dff-b90f-fefb309026d5</th>\n",
+       "      <td>3c79aeca-5747-4c62-b108-059369e0078c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>a5c5ede0-b38e-468c-a2f9-874392f72080</th>\n",
-       "      <td>272c5b16-c08c-4de8-863f-45e2784d77f1</td>\n",
+       "      <th>ea2ac89a-d33a-41a6-982b-9da7eff77147</th>\n",
+       "      <td>673a0c86-5af1-4311-b6d6-42d37afd95e5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -345,14 +347,14 @@
       "text/plain": [
        "                                                               new-rec-gid\n",
        "old-rec-gid                                                               \n",
-       "4672ac68-27ac-4843-9c19-d283018a7c17  cd24bef4-d513-4e42-8cd4-0b8be1e654b7\n",
-       "6db9ab2f-1bb7-42bb-a1cf-62935e906c2a  f2b7197a-d85b-4d26-ae51-2f0826ac69c7\n",
-       "7068ff7e-5dc2-49a7-b918-45d35c24cec4  d404340f-87a2-4626-ac4a-2451bfa04387\n",
-       "14005a4e-54f3-4547-8f78-e264344efe6f  d07f465a-883a-4574-ac4c-fc51ba8679ab\n",
-       "a5c5ede0-b38e-468c-a2f9-874392f72080  272c5b16-c08c-4de8-863f-45e2784d77f1"
+       "dfbefafa-a7dc-4024-8a28-be15537591e9  c4793e5b-5825-4221-893d-8b3776289127\n",
+       "6fdc7ef3-19ea-421d-9246-243a3c9b193a  041199ca-09bd-4dfc-90a5-ec12fee79cba\n",
+       "aceb2a1c-c696-4948-8f98-e1690212f2c3  3455438b-8105-4cff-a08d-a13da4df20f1\n",
+       "2251ff3f-05ac-4dff-b90f-fefb309026d5  3c79aeca-5747-4c62-b108-059369e0078c\n",
+       "ea2ac89a-d33a-41a6-982b-9da7eff77147  673a0c86-5af1-4311-b6d6-42d37afd95e5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -384,8 +386,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.39 s, sys: 3.19 s, total: 12.6 s\n",
-      "Wall time: 24.9 s\n"
+      "CPU times: user 9.52 s, sys: 2.84 s, total: 12.4 s\n",
+      "Wall time: 25.2 s\n"
      ]
     },
     {
@@ -440,7 +442,7 @@
        "Index: [9b02977e-a03b-4a6b-a9a9-06e722bdcd7a, 43da7544-6283-3159-84f9-537fe823a1a7, 0b6b6283-a5a8-4560-9fa8-f68a430d86ea, fa124f9a-d8ea-36a3-bed3-c817fdbe13e2, e56c6d3c-09cf-33a0-81c5-ceade77c35dc]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -472,8 +474,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.28 s, sys: 337 ms, total: 2.62 s\n",
-      "Wall time: 5.99 s\n"
+      "CPU times: user 2.22 s, sys: 329 ms, total: 2.55 s\n",
+      "Wall time: 5.82 s\n"
      ]
     },
     {
@@ -539,7 +541,7 @@
        "9ba7a9b9-a21c-4b12-8771-4c108b08b3e2  13b3875a-c89a-4be5-a6e4-0ca9164bc41d"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,12 +568,13 @@
     "3. Pass it thorugh the following:\n",
     "    - check_in_recording()\n",
     "    - Get mbids that don't exist in recording, and pass it through check_in_redirect()\n",
-    "    - Get mbids that don't exist in redirect, and pass it through check_in_track()"
+    "    - Get mbids that don't exist in redirect, and pass it through check_in_track()\n",
+    "    - get mbids that don't exist in track, and add them to a series of unknown mbids."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,57 +585,188 @@
     "3. Get a boolean map for series_of_mbids to check if each MBID exists in the MB table.\n",
     "'''\n",
     "\n",
-    "# To Do: Mod the function to only take in & return unique mbids.\n",
-    "\n",
     "def check_in_recording(series_of_mbids):\n",
-    "    # Takes a series, removes duplicate values, turns back into series.\n",
-    "    series_of_unique_mbids = pd.Series(series_of_mbids.unique())\n",
     "    \n",
     "    # Queries all mbids in the recording table. Returns mbids that are present in recording table.\n",
-    "    mbids_in_recording = MB_recording.gid[MB_recording.gid.isin(series_of_unique_mbids)]\n",
+    "    mbids_in_recording = MB_recording.gid[MB_recording.gid.isin(series_of_mbids)]\n",
     "    \n",
     "    # Makes a boolean map for all mbids in series_of_unique_mbids\n",
-    "    bool_map_recording = series_of_unique_mbids.isin(mbids_in_recording)\n",
+    "    bool_map_recording = series_of_mbids.isin(mbids_in_recording)\n",
     "    \n",
-    "    bool_map_recording_nonunique = series_of_mbids.isin(mbids_in_recording)\n",
-    "    \n",
-    "    # Returns a series of boolean values corresponding the the fullsized series_of_mbids\n",
-    "    return bool_map_recording_nonunique\n",
+    "    # Returns a series of boolean values corresponding to series_of_mbids \n",
+    "    # (bool specified if value exists in recording table or not.)\n",
+    "    return bool_map_recording\n",
     "    # return MB_recording.gid[MB_recording.gid.isin(series_of_mbids)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Queried 382674 rows in ~2s\n",
-      "CPU times: user 2.13 s, sys: 911 µs, total: 2.13 s\n",
-      "Wall time: 2.13 s\n"
+      "CPU times: user 2.87 s, sys: 0 ns, total: 2.87 s\n",
+      "Wall time: 2.86 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "2     True\n",
+       "3     True\n",
+       "4     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "# Testing check_recording_existance()\n",
+    "# Testing check_in_recording()\n",
     "\n",
     "input = pd.Series(df['recording-MBID'].unique())\n",
     "output = check_in_recording(input)\n",
     "\n",
-    "output.head()\n",
-    "print(\"Queried 382674 rows in ~2s\")"
+    "output.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# A generic function for queries a series into another series.\n",
+    "    # Returns a series of boolean values corresponding to series_of_mbids \n",
+    "    # (bool specifies if value exists in recording table or not.)\n",
+    "\n",
+    "def query_in(series_to_query, series_to_query_in):\n",
+    "    # Queries all mbids in the recording table. Returns mbids that are present in recording table.\n",
+    "    mbids_in_series = series_to_query_in[series_to_query_in.isin(series_to_query)]\n",
+    "    \n",
+    "    # Makes a boolean map for all mbids in series_of_unique_mbids\n",
+    "    bool_map = series_to_query.isin(mbids_in_series)\n",
+    "    \n",
+    "    return bool_map\n",
+    "    # return MB_recording.gid[MB_recording.gid.isin(series_of_mbids)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.69 s, sys: 0 ns, total: 3.69 s\n",
+      "Wall time: 3.69 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1     True\n",
+       "2    False\n",
+       "3    False\n",
+       "4     True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Testing query_in() with recording MBID\n",
+    "\n",
+    "in_for_rec = pd.Series(df['recording-MBID'].unique())\n",
+    "out_for_rec = query_in(in_for_rec, MB_recording.gid)\n",
+    "\n",
+    "out_for_rec.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 7.49 s, sys: 0 ns, total: 7.49 s\n",
+      "Wall time: 7.5 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False    253218\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "in_for_tack = in_for_rec[-out_for_rec]\n",
+    "out_for_track = query_in(in_for_rec, MB_track)\n",
+    "\n",
+    "out_for_track.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 799 ms, sys: 0 ns, total: 799 ms\n",
+      "Wall time: 794 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False    157985\n",
+       "True      39496\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "in_for_redir = in_for_rec[out_for_rec]\n",
+    "# in_for_redir = in_for_rec\n",
+    "\n",
+    "out_for_redir = query_in(in_for_redir, MB_redirects.index)\n",
+    "out_for_redir.value_counts()"
+   ]
   }
  ],
  "metadata": {
